index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -13,19 +13,7 @@
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com" defer></script>
-    <!-- Tailwind-Konfiguration -->
-    <script defer>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#e63946',
-                        secondary: '#2c2c2c',
-                    }
-                }
-            }
-        }
-    </script>
+
     <!-- Font Awesome für Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="..." crossorigin="anonymous">
 
@@ -33,13 +21,6 @@
     <style>
         html {
             scroll-behavior: smooth;
-        }
-        /* Optimierter Farbkontrast */
-        .text-gray-800 {
-            color: #1a1a1a;
-        }
-        .bg-gray-100 {
-            background-color: #f5f5f5;
         }
     </style>
 </head>
@@ -52,11 +33,11 @@
                 <a href="#hero"><img src="logo.png" alt="ND Photography Logo" class="h-10"></a>
             </div>
             <nav class="hidden md:flex space-x-6" aria-label="Hauptnavigation">
-                <a href="#hero" class="text-gray-800 font-semibold hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Home</a>
-                <a href="#about" class="text-gray-800 font-semibold hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Über mich</a>
-                <a href="#services" class="text-gray-800 font-semibold hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Services</a>
-                <a href="#portfolio" class="text-gray-800 font-semibold hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Portfolio</a>
-                <a href="#contact" class="text-gray-800 font-semibold hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Kontakt</a>
+                <a href="#hero" class="text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Home</a>
+                <a href="#about" class="text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Über mich</a>
+                <a href="#services" class="text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Services</a>
+                <a href="#portfolio" class="text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Portfolio</a>
+                <a href="#contact" class="text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Kontakt</a>
             </nav>
             <div class="md:hidden">
                 <button id="menu-btn" class="text-gray-800 text-2xl focus:outline-none" aria-label="Menü" aria-expanded="false" aria-controls="mobile-menu">
@@ -67,11 +48,11 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white shadow" role="navigation" aria-label="Mobile Hauptnavigation">
             <nav class="px-4 pt-4 pb-2 space-y-2">
-                <a href="#hero" class="block text-gray-800 font-semibold hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Home</a>
-                <a href="#about" class="block text-gray-800 font-semibold hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Über mich</a>
-                <a href="#services" class="block text-gray-800 font-semibold hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Services</a>
-                <a href="#portfolio" class="block text-gray-800 font-semibold hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Portfolio</a>
-                <a href="#contact" class="block text-gray-800 font-semibold hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Kontakt</a>
+                <a href="#hero" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Home</a>
+                <a href="#about" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Über mich</a>
+                <a href="#services" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Services</a>
+                <a href="#portfolio" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Portfolio</a>
+                <a href="#contact" class="block text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Kontakt</a>
             </nav>
         </div>
     </header>
@@ -92,7 +73,7 @@
             <div class="mt-8 text-center">
                 <h1 class="text-3xl md:text-5xl font-bold text-gray-800">Ihre Momente - perfekt eingefangen.</h1>
                 <p class="mt-4 text-lg md:text-xl text-gray-600">Authentische Portrait- und Eventfotografie – Ihre Augenblicke für die Ewigkeit.</p>
-                <a href="#contact" class="inline-block mt-6 px-6 py-3 border-2 border-primary text-primary font-semibold rounded-full hover:bg-primary hover:text-white transition duration-300 focus:outline-none focus:ring-2 focus:ring-primary">Buche dein Moment!</a>
+                <a href="#contact" class="inline-block mt-6 px-6 py-3 border-2 border-red-500 text-red-500 font-semibold rounded-full hover:bg-red-500 hover:text-white transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Buche dein Moment!</a>
             </div>
             <!-- Kurze Beschreibung der Services -->
             <div class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-6">
@@ -156,7 +137,7 @@
                             Perfekt für professionelle Headshots, Teamfotos oder Produktfotos für Ihre Unternehmenswebsite.
                         </p>
                         <p class="text-gray-600 font-bold mb-4">Preis: ab 199.- EUR</p>
-                        <a href="#contact" class="px-6 py-2 bg-primary text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-primary">Anfragen</a>
+                        <a href="#contact" class="px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
                     </div>
                 </div>
                 <!-- Service 2 -->
@@ -170,7 +151,7 @@
                             Porträt- und Eventfotografie für jegliche Anlässe, um unvergessliche Momente festzuhalten.
                         </p>
                         <p class="text-gray-600 font-bold mb-4">Preis: ab 299.- EUR</p>
-                        <a href="#contact" class="px-6 py-2 bg-primary text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-primary">Anfragen</a>
+                        <a href="#contact" class="px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
                     </div>
                 </div>
                 <!-- Service 3 -->
@@ -184,7 +165,7 @@
                             Detailreiche Retusche und Optimierung Ihrer Bilder, um das Beste aus jedem Foto herauszuholen.
                         </p>
                         <p class="text-gray-600 font-bold mb-4">Preis: ab 19.- EUR</p>
-                        <a href="#contact" class="px-6 py-2 bg-primary text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-primary">Anfragen</a>
+                        <a href="#contact" class="px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
                     </div>
                 </div>
             </div>
@@ -200,10 +181,10 @@
             </p>
             <!-- Kategorien -->
             <div class="mt-8 flex justify-center space-x-4">
-                <button class="filter-button px-4 py-2 bg-primary text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-primary" data-category="all">Alle</button>
-                <button class="filter-button px-4 py-2 bg-primary text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-primary" data-category="business">Business</button>
-                <button class="filter-button px-4 py-2 bg-primary text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-primary" data-category="portraits">Porträts</button>
-                <button class="filter-button px-4 py-2 bg-primary text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-primary" data-category="events">Events</button>
+                <button class="filter-button px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500" data-category="all">Alle</button>
+                <button class="filter-button px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500" data-category="business">Business</button>
+                <button class="filter-button px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500" data-category="portraits">Porträts</button>
+                <button class="filter-button px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500" data-category="events">Events</button>
             </div>
             <!-- Bildergalerie -->
             <div class="mt-10 grid grid-cols-2 md:grid-cols-4 gap-4">
@@ -243,44 +224,44 @@
             <form action="mailto:info@ndphotography.de" method="post" enctype="text/plain" class="mt-8 max-w-md mx-auto">
                 <div class="flex flex-col gap-4">
                     <label for="vorname" class="sr-only">Vorname</label>
-                    <input type="text" id="vorname" name="vorname" placeholder="Vorname" required class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-primary">
+                    <input type="text" id="vorname" name="vorname" placeholder="Vorname" required class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-red-500">
                     <label for="name" class="sr-only">Name</label>
-                    <input type="text" id="name" name="name" placeholder="Name" required class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-primary">
+                    <input type="text" id="name" name="name" placeholder="Name" required class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-red-500">
                     <label for="email" class="sr-only">Ihre E-Mail</label>
-                    <input type="email" id="email" name="email" placeholder="Ihre E-Mail" required class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-primary">
+                    <input type="email" id="email" name="email" placeholder="Ihre E-Mail" required class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-red-500">
                     <label for="phone" class="sr-only">Mobilnummer</label>
-                    <input type="tel" id="phone" name="phone" placeholder="Mobilnummer" class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-primary">
+                    <input type="tel" id="phone" name="phone" placeholder="Mobilnummer" class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-red-500">
                     <label for="anfrage" class="sr-only">Anfrage</label>
-                    <textarea id="anfrage" name="anfrage" placeholder="Anfrage" required class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-primary h-32"></textarea>
-                    <button type="submit" class="px-6 py-2 bg-primary text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-primary">Buche dein Moment!</button>
+                    <textarea id="anfrage" name="anfrage" placeholder="Anfrage" required class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-red-500 h-32"></textarea>
+                    <button type="submit" class="px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Buche dein Moment!</button>
                 </div>
             </form>
             <!-- Social Media Links -->
             <div class="mt-8 flex justify-center space-x-4">
-                <a href="#" class="text-xl text-gray-800 hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="text-xl text-gray-800 hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="text-xl text-gray-800 hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="text-xl text-gray-800 hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="text-xl text-gray-800 hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-xl text-gray-800 hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
     </section>
     </main>
 
     <!-- Footer -->
-    <footer class="bg-secondary text-white py-8" role="contentinfo">
+    <footer class="bg-gray-800 text-white py-8" role="contentinfo">
         <div class="container mx-auto px-4 text-center">
             <p>&copy; 2024 ND Photography. Alle Rechte vorbehalten.</p>
             <ul class="mt-4 flex flex-col md:flex-row justify-center space-y-2 md:space-y-0 md:space-x-4">
-                <li><a href="#hero" class="hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Home</a></li>
-                <li><a href="#about" class="hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Über mich</a></li>
-                <li><a href="#services" class="hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Services</a></li>
-                <li><a href="#portfolio" class="hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Portfolio</a></li>
-                <li><a href="#contact" class="hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Kontakt</a></li>
-                <li><a href="impressum.html" class="hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary">Impressum</a></li>
+                <li><a href="#hero" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Home</a></li>
+                <li><a href="#about" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Über mich</a></li>
+                <li><a href="#services" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Services</a></li>
+                <li><a href="#portfolio" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Portfolio</a></li>
+                <li><a href="#contact" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Kontakt</a></li>
+                <li><a href="impressum.html" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Impressum</a></li>
             </ul>
             <div class="mt-4 flex justify-center space-x-4">
-                <a href="#" class="text-xl hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="text-xl hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="text-xl hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
     </footer>
