index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="mt-8 text-center">
                 <h1 class="text-3xl md:text-5xl font-bold text-gray-800">Ihre Momente - perfekt eingefangen.</h1>
                 <p class="mt-4 text-lg md:text-xl text-gray-600">Authentische Portrait- und Eventfotografie – Ihre Augenblicke für die Ewigkeit.</p>
-                <a href="#contact" class="inline-block mt-6 px-6 py-3 border-2 border-red-500 text-red-500 font-semibold rounded-full hover:bg-red-500 hover:text-white transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Buche dein Moment!</a>
+                <a href="#contact" class="inline-block mt-6 px-6 py-3 border-2 border-red-500 text-red-500 bg-red-50 font-semibold rounded-full hover:bg-red-500 hover:text-white transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Buche dein Moment!</a>
             </div>
             <!-- Kurze Beschreibung der Services -->
             <div class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-6">
@@ -100,18 +100,18 @@
     <section id="about" class="py-16 bg-white">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800">Über mich</h2>
-            <div class="mt-8 flex flex-col md:flex-row items-center">
+            <div class="mt-2 flex flex-col md:flex-row items-center">
                 <!-- Textbereich -->
                 <div class="md:w-1/2 md:pr-6">
                     <p class="mt-6 text-gray-600">
                         Seit meiner Jugend beschäftige ich mich mit Fotografie und halte unvergessliche Momente fest – ob bei Porträts, Business-Shootings oder Events. Mit jedem Bild erzähle ich eine Geschichte und sorge dafür, dass Ihre Erinnerungen lebendig bleiben.
                     </p>
-                    <p class="mt-4 text-gray-600">
+                    <p class="mt-2 text-gray-600">
                         Als leidenschaftlicher Fotograf mit langjähriger Erfahrung im Bereich der Portrait- und Eventfotografie sorge ich dafür, dass Ihre schönsten Momente unvergesslich bleiben.
                     </p>
                 </div>
                 <!-- Bildbereich mit Lazy Loading -->
-                <div class="md:w-1/2 md:pl-6 mb-6 md:mb-0">
+                <div class="md:w-1/2 md:pl-6 mb-2 mt-6 md:mb-0">
                     <img data-src="https://s3-eu-west-1.amazonaws.com/yousty-switzerland/apprenticeship_jobs%2F1494%2Fjob_finder_image%2Ff59db1c54ca12f87f73e859eb1e51e4f%2F1494.jpg" alt="Fotograf" class="lazy rounded-lg shadow-lg w-full h-auto" width="600" height="400">
                 </div>
             </div>
@@ -122,7 +122,7 @@
     <section id="services" class="py-16 bg-gray-100">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800">Service</h2>
-            <p class="mt-6 text-gray-600 text-center max-w-2xl mx-auto">
+            <p class="mt-6 text-gray-600 max-w-2xl mx-auto">
                 Ob es der freudige Ausdruck eines Brautpaares, die lebendige Energie einer Feier oder das stille Lächeln eines Kindes ist – jedes Bild erzählt eine einzigartige Geschichte.
             </p>
             <div class="mt-12 space-y-12">
@@ -151,7 +151,7 @@
                             Porträt- und Eventfotografie für jegliche Anlässe, um unvergessliche Momente festzuhalten.
                         </p>
                         <p class="text-gray-600 font-bold mb-4">Preis: ab 299.- EUR</p>
-                        <a href="#contact" class="px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
+                        <a href="#contact" class="px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus wo :outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
                     </div>
                 </div>
                 <!-- Service 3 -->
@@ -176,7 +176,7 @@
     <section id="portfolio" class="py-16 bg-white">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800">Portfolio</h2>
-            <p class="mt-6 text-gray-600 text-center max-w-2xl mx-auto">
+            <p class="mt-6 text-gray-600 max-w-2xl mx-auto">
                 Eine Auswahl meiner besten Arbeiten – Porträts, Business-Shootings und Events.
             </p>
             <!-- Kategorien -->
@@ -218,7 +218,7 @@
     <section id="contact" class="py-16 bg-gray-100">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800">Kontaktanfrage</h2>
-            <p class="mt-6 text-gray-600 text-center max-w-2xl mx-auto">
+            <p class="mt-6 text-gray-600 max-w-2xl mx-auto">
                 Haben Sie Fragen oder möchten Sie einen Termin vereinbaren?
             </p>
             <form action="mailto:info@ndphotography.de" method="post" enctype="text/plain" class="mt-8 max-w-md mx-auto">
@@ -236,12 +236,7 @@
                     <button type="submit" class="px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Buche dein Moment!</button>
                 </div>
             </form>
-            <!-- Social Media Links -->
-            <div class="mt-8 flex justify-center space-x-4">
-                <a href="#" class="text-xl text-gray-800 hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="text-xl text-gray-800 hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="text-xl text-gray-800 hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            </div>
+ 
         </div>
     </section>
     </main>
@@ -303,7 +298,7 @@
                 const category = button.getAttribute('data-category');
 
                 portfolioItems.forEach(item => {
-                    if (category === 'all' || item.classList.contains(`category-${category}`)) {
+                    if (category === 'all' || item.classList.contains(`category-`)) {
                         item.style.display = 'block';
                     } else {
                         item.style.display = 'none';
