index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <!-- Bilder mit Lazy Loading und srcset -->
                 <img data-src="IMG_01.webp" alt="Bild 1" class="lazy w-full h-40 object-cover rounded-lg shadow-lg" width="600" height="400">
                 <img data-src="IMG_02.webp" alt="Bild 2" class="lazy w-full h-40 object-cover rounded-lg shadow-lg" width="600" height="400">
-                <img data-src="IMG_03" alt="Bild 3" class="lazy w-full h-40 object-cover rounded-lg shadow-lg" width="600" height="400">
+                <img data-src="IMG_03.webp" alt="Bild 3" class="lazy w-full h-40 object-cover rounded-lg shadow-lg" width="600" height="400">
                 <img data-src="IMG_004.webp" alt="Bild 4" class="lazy w-full h-40 object-cover rounded-lg shadow-lg" width="600" height="400">
             </div>
             <!-- Slogan und CTA -->
