index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <!-- Bildbereich mit Lazy Loading -->
                 <div class="md:w-1/2 md:pl-6 mb-2 mt-6 md:mb-0">
-                    <img data-src="https://s3-eu-west-1.amazonaws.com/yousty-switzerland/apprenticeship_jobs%2F1494%2Fjob_finder_image%2Ff59db1c54ca12f87f73e859eb1e51e4f%2F1494.jpg" alt="Fotograf" class="lazy rounded-lg shadow-lg w-full h-auto" width="600" height="400">
+                    <img data-src="IMG_05.webp" alt="Fotograf" class="lazy rounded-lg shadow-lg w-full h-auto" width="600" height="400">
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
                 <!-- Service 1 -->
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/2">
-                        <img data-src="https://www.boris-baldinger.com/content/uploads/2024/04/B1_03691_3840px-1024x683.jpg" alt="Business Fotografie" class="lazy rounded-lg shadow-lg w-full h-64 object-cover" width="600" height="400">
+                        <img data-src="IMG_06.webp" alt="Business Fotografie" class="lazy rounded-lg shadow-lg w-full h-64 object-cover" width="600" height="400">
                     </div>
                     <div class="md:w-1/2 md:pl-8 mt-6 md:mt-0">
                         <h3 class="text-2xl font-semibold mb-4">Business Fotografie</h3>
@@ -143,7 +143,7 @@
                 <!-- Service 2 -->
                 <div class="flex flex-col md:flex-row items-center md:flex-row-reverse">
                     <div class="md:w-1/2">
-                        <img data-src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3nIZZ_lE7xePflmla8PfZpL7KqZ12meo75g&s" alt="Porträts & Events" class="lazy rounded-lg shadow-lg w-full h-64 object-cover" width="600" height="400">
+                        <img data-src="IMG_07.webp" alt="Porträts & Events" class="lazy rounded-lg shadow-lg w-full h-64 object-cover" width="600" height="400">
                     </div>
                     <div class="md:w-1/2 md:pr-8 mt-6 md:mt-0">
                         <h3 class="text-2xl font-semibold mb-4">Porträts & Events</h3>
@@ -157,7 +157,7 @@
                 <!-- Service 3 -->
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/2">
-                        <img data-src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAl2XaLCqdyDvGjg6367b5s5nckbupXHFtyA&s" alt="Photoshop-Service" class="lazy rounded-lg shadow-lg w-full h-64 object-cover" width="600" height="400">
+                        <img data-src="IMG_08.webp" alt="Photoshop-Service" class="lazy rounded-lg shadow-lg w-full h-64 object-cover" width="600" height="400">
                     </div>
                     <div class="md:w-1/2 md:pl-8 mt-6 md:mt-0">
                         <h3 class="text-2xl font-semibold mb-4">Photoshop-Service</h3>
