index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -191,24 +191,24 @@
             <div class="mt-10 grid grid-cols-2 md:grid-cols-4 gap-4">
                 <!-- Business Bilder -->
                 <div class="portfolio-item category-business">
-                    <img data-src="IMG_business1.webp" alt="Business Bild 1" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_11.webp" alt="Business Bild 1" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
                 </div>
                 <div class="portfolio-item category-business">
-                    <img data-src="IMG_business2.webp" alt="Business Bild 2" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_06.webp" alt="Business Bild 2" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
                 </div>
                 <!-- Porträts Bilder -->
                 <div class="portfolio-item category-portraits">
-                    <img data-src="IMG_portrait1.webp" alt="Porträt Bild 1" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_09.webp" alt="Porträt Bild 1" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
                 </div>
                 <div class="portfolio-item category-portraits">
-                    <img data-src="IMG_portrait2.webp" alt="Porträt Bild 2" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_05.webp" alt="Porträt Bild 2" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
                 </div>
                 <!-- Events Bilder -->
                 <div class="portfolio-item category-events">
-                    <img data-src="IMG_event1.webp" alt="Event Bild 1" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_07.webp" alt="Event Bild 1" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
                 </div>
                 <div class="portfolio-item category-events">
-                    <img data-src="IMG_event2.webp" alt="Event Bild 2" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_08.webp" alt="Event Bild 2" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
                 </div>
                 <!-- Weitere Bilder hinzufügen -->
             </div>
