--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="bg-white fixed w-full top-0 z-50 shadow" role="banner">
         <div class="container mx-auto px-4 py-4 flex items-center justify-between">
             <div class="logo">
-                <a href="#hero"><img src="logo.png" alt="ND Photography Logo" class="h-10"></a>
+                <a href="#hero"><img src="logo.webp" alt="ND Photography Logo" class="h-10"></a>
             </div>
             <nav class="hidden md:flex space-x-6" aria-label="Hauptnavigation">
                 <a href="#hero" class="text-gray-800 font-semibold hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Home</a>
